--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,11 @@ body {
   padding: 20px 10px;
 }
 
+.Item-selected-count {
+  text-wrap: nowrap;
+  padding: 20px 10px;
+}
+
 .Item-actions {
   display: flex;
   justify-content: flex-end;
