--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -4,11 +4,6 @@
   transition: background-color 1s;
 }
 
-.Item_selected {
-  background: #75aaf1;
-  color: #fff;
-}
-
 .Item-code {
   padding: 20px 10px 20px 20px;
 }
@@ -16,6 +11,15 @@
 .Item-title {
   width: 100%;
   padding: 20px 10px;
+}
+
+.Item-price {
+  padding: 20px;
+}
+
+.Item-count {
+  text-wrap: nowrap;
+  padding: 20px
 }
 
 .Item-actions {
