--- a/src/components/basket/style.css
+++ b/src/components/basket/style.css
@@ -1,18 +1,25 @@
 .Basket-list {
     margin-top: 60px;
-    border-top: 1px dashed #ccc;
 }
 
 .Basket-price {
-    text-align: end;
-    font-weight: 600;
-    padding-right: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: right;
+    line-height: 20px;
+    padding: 20px;
+    padding-right: 105px;
+    margin: 0;
 }
 
 .Basket-total_padding_cell {
-    padding-right: 20px;
+    padding: 20px;
 }
 
 .Basket-empty {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
     text-align: center;
 }
