--- a/src/components/head/style.css
+++ b/src/components/head/style.css
@@ -7,10 +7,17 @@
 }
 
 .Head-title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  line-height: 37px;
   margin: 0;
   padding: 20px 20px 10px;
 }
 
 .Head-controls {
-  padding: 20px 20px 10px;
+  padding: 20px 30px 10px 20px;
+}
+
+.Head-controls * {
+  padding: 1px 11px !important;
 }
