--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -14,8 +14,9 @@
 
 .Modal-content {
     width: 960px;
-    min-height: 400px;
+    height: 410px;
     background-color: #fff;
     border-radius: 10px;
-    overflow: hidden;
+    overflow: auto;
+    box-shadow: 0px 0px 10px 0px #00000080;
 }
