--- a/src/components/basket-item/style.css
+++ b/src/components/basket-item/style.css
@@ -17,16 +17,18 @@
 }
 
 .Basket-Item-price {
+  font-size: 18px;
   text-align: right;
   line-height: 20px;
-  padding: 20px;
+  padding: 20px 30px 20px 20px;
   color: #404040;
 }
 
 .Basket-Item-count {
+  font-size: 18px;
   text-align: right;
   text-wrap: nowrap;
-  padding: 20px;
+  padding: 20px 15px 20px 30px;
   color: #404040;
 }
 
