--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -14,9 +14,9 @@
 
 .Modal-content {
     width: 960px;
-    height: 410px;
+    min-height: 410px;
     background-color: #fff;
     border-radius: 10px;
-    overflow: auto;
     box-shadow: 0px 0px 10px 0px #00000080;
+    overflow: hidden;
 }
