--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -19,6 +19,15 @@
   padding: 20px 10px;
 }
 
+.Item-title * {
+  color: #000;
+  text-decoration: none;
+}
+
+.Item-title *:hover {
+  text-decoration: underline;
+}
+
 .Item-actions {
   padding: 20px 20px 20px 10px;
   display: flex;
