updete auth and bug fix

--- a/src/components/form-layout/style.css
+++ b/src/components/form-layout/style.css
@@ -12,7 +12,17 @@
     font-weight: bold;
 }
 
+.FormLayout-error:not(:has(*)) {
+    display: none !important;
+}
+
 .FormLayout-error {
     color: #ff0000;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.FormLayout-error * {
     margin: 0;
 }
