--- a/src/components/input/style.css
+++ b/src/components/input/style.css
@@ -1,8 +1,9 @@
 .Input {
+  box-sizing: border-box;
   font-size: 16px;
   padding: 2px;
 }
 
 .Input_theme_big {
-  width: 292px;
+  width: 300px;
 }
